--- a/.github/workflows/generate-typescript-client.yml
+++ b/.github/workflows/generate-typescript-client.yml
@@ -53,7 +53,9 @@ jobs:
         - Generated from fineract.json
         - Triggered by release: ${{ github.event.release.tag_name }}
         - Release: ${{ github.event.release.html_url }}"
-        git push
+        # Determine the default branch and push to it
+        DEFAULT_BRANCH=$(git symbolic-ref refs/remotes/origin/HEAD | sed 's@^refs/remotes/origin/@@')
+        git push origin HEAD:$DEFAULT_BRANCH
 
     - name: Create TypeScript client archive
       if: steps.verify-changed-files.outputs.changed == 'true'
