fix ci to write content

--- a/.github/workflows/generate-typescript-client.yml
+++ b/.github/workflows/generate-typescript-client.yml
@@ -5,6 +5,10 @@ on:
     types: [ published, created ]
   workflow_dispatch: # Allow manual triggering
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   generate-client:
     runs-on: ubuntu-latest
